remove helplayer on mobile, add static menu button to index, correct faq

--- a/css/style.css
+++ b/css/style.css
@@ -315,6 +315,21 @@ nav form .form-control
   }
 
 }
+.index-menu {
+  font-size: 32px;
+  position: relative;
+  top: 8px;
+  margin-top: 15px;
+  margin-right: 35px;
+  color: white;
+  float: right;
+  z-index:10;
+}
+
+.index-menu:hover, .index-menu:active, .index-menu:visited, .index-menu:focus {
+  text-decoration: none;
+  color: white
+}
 
 nav .menu-action {
   font-size: 32px;
